--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -11,7 +11,7 @@
     padding: var(--default-padding);
 }
 
-.loginScreen{
+.registerScreen{
     display: flex;
     justify-content: center;
     align-items: center;
