--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,11 +1,10 @@
 
 .input{
-    width: auto;
+    width: 100%;
     padding: 1rem;
     background-color: var(--white-bg);
     color: var(--principal-color);
     font-size: .9rem;
-    margin-bottom: 1rem;
     transition: all 0.3s;
     border-top: 1px solid var(--border-color);
     border-left: none;
@@ -32,4 +31,16 @@
     border-bottom: 1px solid var(--border-color);
     border-top-left-radius: var(--border-radius);
     border-bottom-left-radius: var(--border-radius);
+}
+
+.input[type="date"]{
+    font-size: .85rem;
+}
+
+.inputGroup{
+    display: flex;
+    width: 100%;
+    align-items: center ;
+    justify-content: center;
+    margin-bottom: 1rem;
 }
