page context and initial aside

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root{
   /* background-colors: */
     --principal-color: #1E1E2F;
-    --second-color: #e14eca;
+    --second-color: #F84B67;
     --white-bg: #FFF;
 
     /* text-colors: */
