--- a/src/components/Aside/Aside.module.css
+++ b/src/components/Aside/Aside.module.css
@@ -1,12 +1,29 @@
+
+
+    .aside .box .header img:hover{
+        cursor: pointer;
+        background-color: #fff;
+    }
+
 .aside{
-    width: 280px;
-    flex-shrink: 0;
-    padding-inline: 2rem;
 
     display: flex;
     flex-direction: column;
-    
 }
+
+.aside.closed{
+    width: 150px;
+    flex-shrink: 0;
+    padding-inline: 2rem;
+
+}
+
+.aside.opened{
+    width: 280px;
+    flex-shrink: 0;
+    padding-inline: 2rem;
+}
+
 .aside .triangle{
     width: 0;
     height: 0;
@@ -15,12 +32,14 @@
     border-bottom: 7px solid var(--second-color);
     margin-left: 1.2rem;
 }
+
 .aside .box{
+
     background-color: var(--second-color);
-    flex: 1;
     padding-inline: .6rem;
     border-top-left-radius: var(--border-radius);
     border-top-right-radius: var(--border-radius);
+    flex: 1;
 }
 
 .aside .box .header{
@@ -32,17 +51,21 @@
     padding-bottom: 1rem;
     border-bottom: 1px solid #e0e0e0;
 }
+
 .aside .box .header img{
+    border-radius: 50%;
+    margin: 0 auto;
+    transition: all ease 0.3s;
+    margin-top: 1rem;
+
+}
+.aside.closed .box .header img{
+    width: 50px;
+    height: 50px;
+    padding: .2rem;
+}
+.aside.opened .box .header img{
     width: 90px;
     height: 90px;
     padding: .8rem;
-    border-radius: 50%;
-    margin: 0 auto;
-    margin-top: 1rem;
-    transition: all ease 0.3s;
-}
-
-.aside .box .header img:hover{
-    cursor: pointer;
-    background-color: #fff;
 }
