--- a/src/components/Aside/Aside.module.css
+++ b/src/components/Aside/Aside.module.css
@@ -69,3 +69,14 @@
     height: 90px;
     padding: .8rem;
 }
+
+.aside .box .menu{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.aside .box .menu ul{
+    list-style: none;
+    padding-inline: 0;
+}
